# playwright-python-poc

./: .gitignore  .tool-versions  README.md  pyproject.toml
.github/workflows/: playwright.yml
tests/: greeting_page_test.py  smoke_test.py  smoke_web_test.py  todo_lists_page_test.py
